<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/padding_normal"
        android:text="@string/task_name" />

    <TextView
        android:id="@+id/taskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/padding_normal"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:visibility="gone"
        android:text="@string/retry" />

    <TextView
        android:id="@+id/btnUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/undo" />
</LinearLayout>
